[package]
name = "http-types"
version = "1.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/http-types"
documentation = "https://docs.rs/http-types"
description = "Common types for HTTP operations."
keywords = ["http", "types", "request", "response", "h2"]
categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::http-server", "web-programming::websocket"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = []
docs = ["unstable"]
unstable = []
hyperium_http = ["http"]

[dependencies]
# features: hyperium/http
http = { version = "0.2.0", optional = true }

anyhow = "1.0.26"
cookie = "0.12.0"
infer = "0.1.2"
omnom = "2.1.1"
pin-project-lite = "0.1.0"
url = "2.1.0"
serde_json = "1.0.51"
serde = { version = "1.0", features = ["derive"] }

[dependencies.async-std]
rev = "v1.6.0-beta.1"
git = "https://github.com/async-rs/async-std"
features = ["attributes"]

[dev-dependencies]
http = "0.2.0"
